# Build_tools_test

./: README.md
autoconf/: .gitignore  Makefile.am  README.md  configure.ac
autoconf/src/: Makefile.am
autoconf/src/sub/: Makefile.am
autoconf/src/sub2/: Makefile.am
autoconf/src/sub2/sub/: Makefile.am
bazel/: README.md
bazel/sample1/: README.md
bazel/sample1/hello/: BUILD  hello.cpp
bazel/sample2/: .bazelversion  README.md
bazel/sample2/src/: BUILD
bazel/sample2/src/sub/: BUILD
bazel/sample2/src/sub2/: BUILD
bazel/sample2/src/sub2/sub/: BUILD
bazel/sample3/: .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE
bazel/sample3/src/: main.rs
bazel/sample4/: README.md
bazel/sample5/: README.md
bazel/sample5/src/cpp/: BUILD  main.cpp  main.h
bazel/sample5/src/java/: BUILD  Main.java
bazel/sample6/: README.md
bazel/sample6/src/cpp/: BUILD  main.cpp  main.h
bazel/sample6/src/java/com/example/project/: BUILD  Loader.java  MANIFEST.MF  Main.java
bazel/sample7/: README.md  WORKSPACE
bazel/sample7/src/java/: BUILD
bazel/sample7/src/jni/: BUILD  interface.cpp  interface.h
bazel/sample7/src/lib/cpp/: BUILD  cpp_animal.cpp  cpp_animal.h  cpp_os.cpp  cpp_os.h
bazel/sample7/src/lib/rust/call_cpp_os/: BUILD  Cargo.toml  build.rs
bazel/sample7/src/lib/rust/country/: BUILD  Cargo.toml  workspace.bzl
bazel/sample7/src/lib/test/: BUILD  test.cpp
cmake/: CMakeLists.txt  README.md
cmake/src/: CMakeLists.txt
cmake/src/sub/: CMakeLists.txt
cmake/src/sub2/: CMakeLists.txt
cmake/src/sub2/sub/: CMakeLists.txt
makefile/: README.md
(+12 files in other folders)
